<resources>
        <string name="app_name">OpenDPMH</string>
        <string name="first_fragment_label">First Fragment</string>
        <string name="second_fragment_label">Second Fragment</string>
        <string name="next">Start Processors</string>
        <string name="previous">Previous</string>
        <string name="stop2">Stop Processors</string>
        <string name="recorder">recorder</string>
        <string name="hello_first_fragment">OpenDPMH - Framework</string>
        <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
        <string name="speech_detected">Speech detected!</string>
        <string name="noise_detected">Noise detected!</string>
        <string name="press_button_to_start">Press button to start VAD!</string>
        <string name="start">Start</string>
        <string name="stop">Stop Processors</string>
        <string name="sample_rate">Sample Rate:</string>
        <string name="frame_size">Frame Size:</string>
        <string name="mode">Mode:</string>
<string name="app_subtitle_full" translatable="false">""</string>
<string name="app_subtitle_demo" translatable="false">"DEMO"</string>
    <string name="versionName">1.0</string>
<string name="action_settings">"Settings"</string>
    <string name="action_close">"Close"</string>
<string name="retry">"Retry"</string>
<string name="unable_refresh">"Unable to refresh."</string>
<string name="load_text">"Loading..."</string>
<string name="unknown_error">"Unknown error."</string>
<string name="undo">"Undo"</string>
<string name="deleted">"Deleted: %1$d"</string>
<string name="time_format_am">"AM"</string>
<string name="time_format_pm">"PM"</string>
<string name="no_application_handle">"No application can handle this request."</string>
<string name="install_web_browser">"Please install a web browser."</string>
<string name="install_email">"Please install an email client and contact %s."</string>
<string name="total_dataprocessor" translatable="true">"Total data processor modules"</string>
<string name="string_total_value_on_date_time">" (%1$s UTC)"</string>
<string name="string_total_value_change_24h_label">"# "</string>
<string name="string_total_value_change_24h" translatable="false">" 0 "</string>
<string name="string_separator_value" translatable="false">": "</string>
<string name="compositionmode" translatable="true">"Composition mode"</string>
<string name="value" translatable="false">"--"</string>
<string name="string_separator_code" translatable="false">": "</string>
<string name="string_crypto_code" translatable="false">"Status"</string>
<string name="string_no_number" translatable="false">"― ― ―"</string>
<string name="default_crypto_code" translatable="false">"BTC"</string>
<string name="default_crypto_sign" translatable="false">"₿"</string>
<string name="string_crypto_list_empty_primary">"Your list of data processor modules is empty!"</string>
<string name="string_crypto_list_empty_secondary">"Add your module via the + button below."</string>
<string name="string_column_coin_ranking" translatable="false">"↑↓"</string>
<string name="string_column_coin_crypto_hold_amount_symbol">"Crypto coin\nAmount &#38; symbol"</string>
<string name="string_column_coin_fiat_price_amount">"Price %1$s\nAmount %2$s"</string>
<string name="string_column_coin_change_24h_1h_7d">"± price %% 1 h / 7 d\n± price %% 24 h\n± amount %1$s 24 h"</string>
<string name="string_column_coin_separator_change" translatable="false">" / "</string>
<string name="sample_text_column_coin_fiat_price_amount">"Price $\nAmount $"</string>
<string name="sample_text_column_coin_change_24h_1h_7d">"± Event % 1 h / 7 d\n± event % 24 h\n± total $ 24 h"</string>
<string name="sample_text_total_value_on_date_time" translatable="false">"Total Data Processor value (11/03/2018 12:55:08 UTC)"</string>
<string name="sample_text_total_value_change_24h" translatable="false">"1538.00"</string>
<string name="sample_text_crypto_value" translatable="false">"Total Digital Phenotyping Events"</string>
<string name="sample_text_fiat_value" translatable="false">"--"</string>
<string name="sample_text_item_icon" translatable="false">"MMM"</string>
<string name="sample_text_item_name" translatable="false">"Data Processor Name"</string>
<string name="sample_text_item_ranking" translatable="false">"1001"</string>
<string name="sample_text_item_amount_code" translatable="false">"0.56822348 BITSILVER"</string>
<string name="sample_text_item_price_fiat" translatable="false">"94,893,149,774.13 USD"</string>
<string name="sample_text_item_amount_fiat" translatable="false">"20,758,463.13 USD"</string>
<string name="sample_text_item_price_percent_change_1h_7d" translatable="false">"-901.94% / -10909.09%"</string>
<string name="sample_text_item_price_percent_change_24h" translatable="false">"+4.25%"</string>
<string name="sample_text_item_amount_fiat_change_24h" translatable="false">"+1,053.12 USD"</string>
<string-array name="fiat_currency_code_array" translatable="false">
    <item>"&usd;"</item>
    <item>"&all;"</item>
    <item>"&dzd;"</item>
    <item>"&ars;"</item>
    <item>"&amd;"</item>
    <item>"&aud;"</item>
    <item>"&azn;"</item>
    <item>"&bhd;"</item>
    <item>"&bdt;"</item>
    <item>"&byn;"</item>
    <item>"&bmd;"</item>
    <item>"&bob;"</item>
    <item>"&bam;"</item>
    <item>"&brl;"</item>
    <item>"&bgn;"</item>
    <item>"&khr;"</item>
    <item>"&cad;"</item>
    <item>"&clp;"</item>
    <item>"&cny;"</item>
    <item>"&cop;"</item>
    <item>"&crc;"</item>
    <item>"&hrk;"</item>
    <item>"&cup;"</item>
    <item>"&czk;"</item>
    <item>"&dkk;"</item>
    <item>"&dop;"</item>
    <item>"&egp;"</item>
    <item>"&eur;"</item>
    <item>"&gel;"</item>
    <item>"&ghs;"</item>
    <item>"&gtq;"</item>
    <item>"&hnl;"</item>
    <item>"&hkd;"</item>
    <item>"&huf;"</item>
    <item>"&isk;"</item>
    <item>"&inr;"</item>
    <item>"&idr;"</item>
    <item>"&irr;"</item>
    <item>"&iqd;"</item>
    <item>"&ils;"</item>
    <item>"&jmd;"</item>
    <item>"&jpy;"</item>
    <item>"&jod;"</item>
    <item>"&kzt;"</item>
    <item>"&kes;"</item>
    <item>"&kwd;"</item>
    <item>"&kgs;"</item>
    <item>"&lbp;"</item>
    <item>"&mkd;"</item>
    <item>"&myr;"</item>
    <item>"&mur;"</item>
    <item>"&mxn;"</item>
    <item>"&mdl;"</item>
    <item>"&mnt;"</item>
    <item>"&mad;"</item>
    <item>"&mmk;"</item>
    <item>"&nad;"</item>
    <item>"&npr;"</item>
    <item>"&twd;"</item>
    <item>"&nzd;"</item>
    <item>"&nio;"</item>
    <item>"&ngn;"</item>
    <item>"&nok;"</item>
    <item>"&omr;"</item>
    <item>"&pkr;"</item>
    <item>"&pab;"</item>
    <item>"&pen;"</item>
    <item>"&php;"</item>
    <item>"&pln;"</item>
    <item>"&gbp;"</item>
    <item>"&qar;"</item>
    <item>"&ron;"</item>
    <item>"&rub;"</item>
    <item>"&sar;"</item>
    <item>"&rsd;"</item>
    <item>"&sgd;"</item>
    <item>"&zar;"</item>
    <item>"&krw;"</item>
    <item>"&ssp;"</item>
    <item>"&ves;"</item>
    <item>"&lkr;"</item>
    <item>"&sek;"</item>
    <item>"&chf;"</item>
    <item>"&thb;"</item>
    <item>"&ttd;"</item>
    <item>"&tnd;"</item>
    <item>"&try;"</item>
    <item>"&ugx;"</item>
    <item>"&uah;"</item>
    <item>"&aed;"</item>
    <item>"&uyu;"</item>
    <item>"&uzs;"</item>
    <item>"&vnd;"</item>
</string-array>
<string-array name="fiat_currency_sign_array" translatable="false">
    <item>"$"</item>
    <item>"L"</item>
    <item>"د.ج"</item>
    <item>"$"</item>
    <item>"֏"</item>
    <item>"$"</item>
    <item>"₼"</item>
    <item>".د.ب"</item>
    <item>"৳"</item>
    <item>"Br"</item>
    <item>"$"</item>
    <item>"Bs."</item>
    <item>"KM"</item>
    <item>"R$"</item>
    <item>"лв"</item>
    <item>"៛"</item>
    <item>"$"</item>
    <item>"$"</item>
    <item>"¥"</item>
    <item>"$"</item>
    <item>"₡"</item>
    <item>"kn"</item>
    <item>"$"</item>
    <item>"Kč"</item>
    <item>"kr"</item>
    <item>"$"</item>
    <item>"£"</item>
    <item>"€"</item>
    <item>"₾""</item>
    <item>"₾₵"</item>
    <item>"₾Q"</item>
    <item>"L"</item>
    <item>"$"</item>
    <item>"Ft"</item>
    <item>"kr"</item>
    <item>"₹"</item>
    <item>"Rp"</item>
    <item>"﷼"</item>
    <item>"ع.د"</item>
    <item>"₪"</item>
    <item>"$"</item>
    <item>"¥"</item>
    <item>"د.ا"</item>
    <item>"₸"</item>
    <item>"Sh"</item>
    <item>"د.ك"</item>
    <item>"с"</item>
    <item>"ل.ل"</item>
    <item>"ден"</item>
    <item>"RM"</item>
    <item>"₨"</item>
    <item>"$"</item>
    <item>"L"</item>
    <item>"₮"</item>
    <item>"د.م."</item>
    <item>"Ks"</item>
    <item>"$"</item>
    <item>"₨"</item>
    <item>"$"</item>
    <item>"$"</item>
    <item>"C$"</item>
    <item>"₦"</item>
    <item>"kr"</item>
    <item>"ر.ع."</item>
    <item>"₨"</item>
    <item>"B/."</item>
    <item>"S/."</item>
    <item>"₱"</item>
    <item>"zł"</item>
    <item>"£"</item>
    <item>"ر.ق"</item>
    <item>"lei"</item>
    <item>"₽"</item>
    <item>"ر.س"</item>
    <item>"дин."</item>
    <item>"$"</item>
    <item>"Rs"</item>
    <item>"₩"</item>
    <item>"£"</item>
    <item>"Bs."</item>
    <item>"Rs"</item>
    <item>"kr"</item>
    <item>"Fr"</item>
    <item>"฿"</item>
    <item>"$"</item>
    <item>"د.ت"</item>
    <item>"₺"</item>
    <item>"Sh"</item>
    <item>"₴"</item>
    <item>"د.إ"</item>
    <item>"$"</item>
    <item>"so'm"</item>
    <item>"₫"</item>
</string-array>
<string name="action_mode_title">"Selected: %1$d"</string>
<string name="action_select_all">"Select all"</string>
<string name="action_delete">"Delete"</string>
<string name="activity_add_search_title">"Add crypto coin(-s)"</string>
<string name="activity_add_search_subtitle">"All cryptocurrencies by ranking"</string>
<string name="string_info_last_updated_on_date_time">"Last updated (%1$s UTC)"</string>
<string name="string_info_results_of_search">"Results %1$s"</string>
<string name="action_search">"Search"</string>
<string name="search_hint">"Search for specific coin…"</string>
<string name="sample_text_info_last_updated_on_date_time">"Last updated (11/03/2018 12:55:08 UTC)"</string>
<string name="sample_text_item_code" translatable="false">"BITSILVER"</string>
<string name="dialog_cryptocurrency_amount_title">"How many %1$s coins do you have?"</string>
<string name="dialog_cryptocurrency_amount_hint">"Enter amount"</string>
<string name="dialog_cryptocurrency_amount_confirm_button">"OK"</string>
<string name="dialog_cryptocurrency_amount_cancel_button">"Cancel"</string>
<string name="dialog_cryptocurrency_amount_error">"Valid number is required!"</string>
<string name="title_activity_settings">"Settings"</string>
<string name="pref_general_category_title">"General"</string>
<string name="pref_language_title">"Language"</string>
<string name="pref_language_key" translatable="false">"preference language"</string>
<string name="pref_default_language_entry">"English"</string>
<string name="pref_default_language_value">"EN"</string>
<string-array name="pref_language_list_entries" translatable="false">
    <item>"English"</item>
    <item>"עִברִית"</item>
    <item>"Lietuvių"</item>
    <item>"Swahili"</item>
</string-array>
<string-array name="pref_language_list_values" translatable="false">
    <item>"EN"</item>
    <item>"HE"</item>
    <item>"LT"</item>
    <item>"SW"</item>
</string-array>
<string name="pref_fiat_currency_title">"Fiat currency"</string>
<string name="pref_fiat_currency_key" translatable="false">"preference fiat currency"</string>
<string name="pref_default_fiat_currency_entry">"&usd; - United States Dollar ($)"</string>
<string name="pref_default_fiat_currency_value">"&usd;"</string>
</resources>