<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/recorder"
        android:layout_width="95dp"
        android:layout_height="36dp"
        android:layout_marginRight="72dp"
        android:text="recorder"
        android:textSize="10sp"
        app:layout_constraintRight_toRightOf="@id/button_first"
        tools:layout_editor_absoluteY="21dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/closeFramework"
        android:layout_width="70dp"
        android:layout_height="41dp"
        android:text="close"
        android:textSize="10sp"
        app:layout_constraintRight_toRightOf="@id/stop2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_first_fragment"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/stop2"
        android:layout_width="170dp"
        android:layout_height="64dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="168dp"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintRight_toRightOf="@id/button_first"
        app:layout_constraintStart_toEndOf="@+id/button_first" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="170dp"
        android:layout_height="64dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />
</androidx.constraintlayout.widget.ConstraintLayout>