<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_cardview_list_item_outer_start_end_margin"
        android:layout_marginTop="@dimen/main_cardview_list_item_outer_top_bottom_margin"
        android:layout_marginEnd="@dimen/main_cardview_list_item_outer_start_end_margin"
        android:layout_marginBottom="@dimen/main_cardview_list_item_outer_top_bottom_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/main_list_item_color_state_selector">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/main_cardview_list_item_inner_margin">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="220dp" />

            <ImageView
                android:src="@drawable/ic_ethereum"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/item_image_icon"
                style="@style/AppTheme"
                android:clickable="true"
                android:focusable="true"
                android:animateFirstView="false"
                app:layout_constraintBottom_toTopOf="@+id/item_ranking"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--<eu.davidea.flipview.FlipView
                android:id="@+id/item_image_icon"
                style="@style/FlipView"
                android:clickable="true"
                android:focusable="true"
                android:animateFirstView="false"
                app:layout_constraintBottom_toTopOf="@+id/item_ranking"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/item_ranking"
                style="@style/MainListItemText"
                android:layout_marginStart="@dimen/main_cardview_list_item_text_between_margin"
                android:layout_marginEnd="@dimen/main_cardview_list_item_text_between_margin"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/item_image_icon"
                app:layout_constraintStart_toStartOf="@+id/item_image_icon"
                app:layout_constraintTop_toBottomOf="@+id/item_image_icon"
                tools:text="@string/sample_text_item_ranking" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/item_name"
                style="@style/MainListItemPrimeText2"
                android:layout_width="163dp"
                android:layout_height="26dp"
                android:layout_marginStart="@dimen/main_cardview_list_item_inner_margin"
                android:textAlignment="viewStart"
                app:layout_constraintBottom_toTopOf="@+id/item_amount_code"
                app:layout_constraintStart_toEndOf="@+id/item_image_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread"
                tools:text="@string/sample_text_item_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/item_amount_code"
                style="@style/MainListItemText"
                android:layout_width="154dp"
                android:layout_height="21dp"
                android:layout_marginStart="@dimen/main_cardview_list_item_inner_margin"
                android:layout_marginEnd="@dimen/main_cardview_list_item_text_between_margin"
                android:textAlignment="viewStart"
                android:textColor="@color/colorForMainListItemPrimeText"
                android:textDirection="locale"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/item_image_icon"
                app:layout_constraintTop_toBottomOf="@+id/item_name"
                tools:text="@string/sample_text_item_amount_code" />

            <ImageView
                android:id="@+id/item_image_info"
                style="@style/AppTheme"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_baseline_info_24"
                android:textAlignment="viewEnd"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2_percent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>